--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-date-object": "^2.1.8",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.1",
     "uuidv4": "^6.2.13"
   },
